<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GarageApp</string>
    <string name="start">Start</string>
    <string name="cars">Cars</string>
    <string name="bikes">Bikes</string>
    <string name="others">Others</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="welcome_to_the_garage_app">Welcome to the Garage App</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="price">Price</string>
    <string name="car_image_displayed">Car Image displayed</string>
    <string name="home_button">Home Button</string>
    <string name="gotoads">gotoads</string>
    <string name="goback">goback</string>
    <string name="gohome">gohome</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_car3">carActivity3</string>
    <string name="title_activity_car_navigation">carNavigation</string>
    <string name="itemimage">itemImage</string>
    <string name="audi_q5">Audi Q5</string>
    <string name="audi_q5_year">2023</string>
    <string name="audi_q5_price">€45,000</string>
    <string name="audi_q5_image_url">https://rb.gy/1q9ol</string>
    <string name="audi_q5_ads_url" tools:ignore="TypographyDashes">https://www.audi.ie/ie/web/en/models/q5/q5-2024.html</string>
    <string name="bmw_3_series">BMW 3 Series</string>
    <string name="bmw_3_series_year">2019</string>
    <string name="bmw_3_series_price">€40,000</string>
    <string name="bmw_3_series_image_url" tools:ignore="TypographyDashes">https://hips.hearstapps.com/hmg-prod/images/p90462506-1652716148.jpeg</string>
    <string name="chevrolet_silverado">Chevrolet Silverado</string>
    <string name="chevrolet_silverado_year">2020</string>
    <string name="chevrolet_silverado_price">€30,000</string>
    <string name="chevrolet_silverado_image">d</string>
    <string name="chevrolet_silverado_image_url">https://www.topgear.com/sites/default/files/2023/07/1-Chevrolet-Silverado.jpg</string>
    <string name="ford_f150_name">Ford F-150</string>
    <string name="ford_f150_year">2022</string>
    <string name="ford_f150_price">€30,000</string>
    <string name="ford_f150_image">b</string>
    <string name="ford_f150_image_url">https://www.ford.com/is/image/content/dam/vdm_ford/live/en_us/ford/nameplate/f-150f-150/2023/collections/dm/22_F150_R7A7574_Tremor_CAN.tif?croppathe=1_3x2&amp;wid=900</string>
    <string name="honda_civic_name">Honda Civic</string>
    <string name="honda_civic_year">2021</string>
    <string name="honda_civic_price">€22,000</string>
    <string name="honda_civic_image">c</string>
    <string name="honda_civic_image_url">https://images.drive.com.au/caradvice/image/private/c_fill,f_auto,g_auto,h_675,q_auto:eco,w_1200/v1/465e6f8aa14ec68fd56685de98d1765a</string>
    <string name="mercedes_e_class_name">Mercedes-Benz E-Class</string>
    <string name="mercedes_e_class_year">2028</string>
    <string name="mercedes_e_class_price">€55,000</string>
    <string name="mercedes_e_class_image">e</string>
    <string name="mercedes_e_class_image_url">https://www.topgear.com/sites/default/files/2023/04/23c0021_002.jpg</string>
    <string name="nissan_rogue_name">Nissan Rogue</string>
    <string name="nissan_rogue_year">2017</string>
    <string name="nissan_rogue_price">€25,000</string>
    <string name="nissan_rogue_image">i</string>
    <string name="nissan_rogue_image_url">https://media.ed.edmunds-media.com/nissan/rogue/2023/oem/2023_nissan_rogue_4dr-suv_platinum_fq_oem_1_1600.jpg</string>
    <string name="tesla_model3_name">Tesla Model 3</string>
    <string name="tesla_model3_year">2019</string>
    <string name="tesla_model3_price">€40,000</string>
    <string name="tesla_model3_image">h</string>
    <string name="tesla_model3_image_url">https://upload.wikimedia.org/wikipedia/commons/9/91/2019_Tesla_Model_3_Performance_AWD_Front.jpg</string>
    <string name="toyota_camry_name">Toyota Camry</string>
    <string name="toyota_camry_year">2020</string>
    <string name="toyota_camry_price">€25,000</string>
    <string name="toyota_camry_image">a</string>
    <string name="toyota_camry_image_url">https://carsalesbase.com/wp-content/uploads/2018/06/Auto-sales-statistics-China-Toyota_Camry-sedan.jpg</string>
    <string name="volkswagen_golf_name">Volkswagen Golf</string>
    <string name="volkswagen_golf_year">2023</string>
    <string name="volkswagen_golf_price">€23,000</string>
    <string name="volkswagen_golf_image">f</string>
    <string name="volkswagen_golf_image_url">https://carsguide-res.cloudinary.com/image/upload/f_auto,fl_lossy,q_auto,t_cg_hero_large/v1/editorial/2021-Volkswagen-Golf-GTI-grey-1001x565-hero.JPG</string>
    <string name="harley_davidson_street_glide_name">Harley-Davidson Street Glide</string>
    <string name="harley_davidson_street_glide_year">2020</string>
    <string name="harley_davidson_street_glide_price">€30,000</string>
    <string name="bmw_r1250gs_adventure_name">BMW R1250GS Adventure</string>
    <string name="bmw_r1250gs_adventure_year">2022</string>
    <string name="bmw_r1250gs_adventure_price">€22,000</string>
    <string name="ducati_panigale_v4_name">Ducati Panigale V4</string>
    <string name="ducati_panigale_v4_year">2019</string>
    <string name="ducati_panigale_v4_price">€28,500</string>
    <string name="honda_gold_wing_name">Honda Gold Wing</string>
    <string name="honda_gold_wing_year">2018</string>
    <string name="honda_gold_wing_price">€28,300</string>
    <string name="kawasaki_ninja_zx10r_name">Kawasaki Ninja ZX-10R</string>
    <string name="kawasaki_ninja_zx10r_year">2021</string>
    <string name="kawasaki_ninja_zx10r_price">€17,000</string>
    <string name="suzuki_hayabusa_name">Suzuki Hayabusa</string>
    <string name="suzuki_hayabusa_year">2021</string>
    <string name="suzuki_hayabusa_price">€18,500</string>
    <string name="yamaha_yzf_r1_name">Yamaha YZF-R1</string>
    <string name="yamaha_yzf_r1_year">2020</string>
    <string name="yamaha_yzf_r1_price">€17,700</string>
    <string name="triumph_tiger_900_name">Triumph Tiger 900</string>
    <string name="triumph_tiger_900_year">2023</string>
    <string name="triumph_tiger_900_price">€14,500</string>
    <string name="ktm_1290_super_duke_r_name">KTM 1290 Super Duke R</string>
    <string name="ktm_1290_super_duke_r_year">2018</string>
    <string name="ktm_1290_super_duke_r_price">€19,500</string>
    <string name="indian_challenger_name">Indian Challenger</string>
    <string name="indian_challenger_year">2023</string>
    <string name="indian_challenger_price">€23,000</string>
    <string name="oil_filter_name">Oil Filter</string>
    <string name="oil_filter_year">2020</string>
    <string name="oil_filter_price">10 euro</string>
    <string name="spark_plugs_name">Spark Plugs</string>
    <string name="spark_plugs_year">2023</string>
    <string name="spark_plugs_price">€7</string>
    <string name="brake_rotors_name">Brake Rotors</string>
    <string name="brake_rotors_year">2017</string>
    <string name="brake_rotors_price">€25</string>
    <string name="air_filter_name">Air Filter</string>
    <string name="air_filter_year">2018</string>
    <string name="air_filter_price">€12</string>
    <string name="ignition_coil_name">Ignition Coil</string>
    <string name="ignition_coil_year">2020</string>
    <string name="ignition_coil_price">€15</string>
    <string name="brake_pads_name">Brake Pads</string>
    <string name="brake_pads_year">2023</string>
    <string name="brake_pads_price">€20</string>
    <string name="chain_name">Chain</string>
    <string name="chain_year">2021</string>
    <string name="chain_price">€15</string>
    <string name="tire_tubes_name">Tire Tubes</string>
    <string name="tire_tubes_year">2022</string>
    <string name="tire_tubes_price">€10</string>
    <string name="pedals_name">Pedals</string>
    <string name="pedals_year">2019</string>
    <string name="pedals_price">€8</string>
    <string name="saddle_name">Saddle</string>
    <string name="saddle_year">2022</string>
    <string name="saddle_price">€25</string>
    <string name="saddle_image">p10</string>
    <string name="itemName">Name</string>
    <string name="itemImage">ItemImage</string>
    <string name="harley_davidson_street_glide_image_url" tools:ignore="TypographyDashes">https://ricks-motorcycles.com/wp-content/uploads/2021/02/Harley-Davidson_Street-Glide-26-Custom_Ricks-001-1024x683.jpg</string>
    <string name="bmw_r1250gs_adventure_image_url">https://motogsworldtours.com/images/made/images/uploads/R1250Adv-standard_1000_795_80_s.jpg</string>
    <string name="ducati_panigale_v4_image_url">https://static.autox.com/uploads/2019/03/Ducati-Panigale-V4-S-image-5-.jpg</string>
    <string name="honda_gold_wing_image_url">https://mcn-images.bauersecure.com/wp-images/4583/_honda_goldwing_01.jpg</string>
    <string name="kawasaki_ninja_zx10r_image_url">https://i.pinimg.com/originals/34/4d/bc/344dbcbbc947ef8b3610c8782f3a3763.jpg</string>
    <string name="suzuki_hayabusa_image_url">https://www.motorcyclistonline.com/resizer/ACbqFbewHHmeDoAKBfbP2BrwaNI=/1440x0/smart/cloudfront-us-east-1.images.arcpublishing.com/octane/LCYD7DULJJD57BP2J3EYJFXNOY.jpg</string>
    <string name="yamaha_yzf_r1_image_url" tools:ignore="TypographyDashes">https://www.webbikeworld.com/wp-content/uploads/2022/06/2022-Yamaha-R1-3-1024x588.jpg</string>
    <string name="triumph_tiger_900_image_url">https://mcn-images.bauersecure.com/wp-images/60336/tiger-900-bond-edition-01.jpg</string>
    <string name="ktm_1290_super_duke_r_image_url">https://media.gq-magazine.co.uk/photos/5e3ec9a302e6e70008c0a800/16:9/w_2560%2Cc_limit/331116_KTM%25201290%2520SUPER%2520DUKE%2520R%2520LAUNCH%25202020.jpg</string>
    <string name="indian_challenger_image_url">https://ridermagazine.com/wp-content/uploads/2022/06/2022-Challenger-Elite-06.jpg</string>
    <string name="oil_filter_image_url">https://res.cloudinary.com/yourmechanic/image/upload/dpr_auto,f_auto,q_auto/v1/article_images/Quality_Oil_Filter</string>
    <string name="spark_plugs_image_url">https://rb.gy/76ejl</string>
    <string name="brake_rotors_image_url">https://irp-cdn.multiscreensite.com/92a36682/dms3rep/multi/Brake+Rotors.PNG</string>
    <string name="air_filter_image_url">https://i.ebayimg.com/images/g/cdUAAOSwSuNaT-wR/s-l1600.jpg</string>
    <string name="ignition_coil_image_url">https://m.media-amazon.com/images/I/61X5aCIWRCL.jpg</string>
    <string name="brake_pads_image_url">https://www.hella.com/partnerworld/assets/images/10032598a.jpg</string>
    <string name="chain_image_url">https://allmoto.ie/media/magefan_blog/2013/06/motorcycle-chain.jpg</string>
    <string name="tire_tubes_image_url">https://m.media-amazon.com/images/I/518UhA5H9KS.jpg</string>
    <string name="pedals_image_url">https://rb.gy/ugkam</string>
    <string name="saddle_image_url" tools:ignore="TypographyDashes">https://img.freepik.com/premium-photo/leather-seat-vintage-motorcycle-saddle-neo-retro-caferacer-motorbike_100800-20569.jpg</string>
    <string name="bmw_3_series_ads_url">https://www.bmw.ie/en/all-models/3-series.html</string>
    <string name="chevrolet_silverado_ads_url">https://www.chevrolet.com/trucks/silverado/1500</string>
    <string name="ford_f150_ads_url">https://www.ford.com/trucks/f150/</string>
    <string name="honda_civic_ads_url">https://www.honda.ie/product/167/honda-civic-hybrid</string>
    <string name="mercedes_e_class_ads_url" tools:ignore="TypographyDashes">https://www.mercedes-benz.ie/passengercars/models/saloon/w213-22-2/overview.html</string>
    <string name="nissan_rogue_ads_url">https://www.nissanusa.com/vehicles/crossovers-suvs/rogue.html</string>
</resources>